--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="../assets/paper_img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	
-	<title>Paper Kit by Creative Tim</title>
+	<title>食在成都Eating in Chengdu</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -57,19 +57,17 @@
     </nav>         
     <div class="alert alert-danger landing-alert">
          <div class="container text-center">
-             <h5>Get a 10% discount on selected products until the 5th of November!</h5>
+             <h5>Eating     in     Chengdu!</h5>
         </div>
     </div>
     
     <div class="wrapper">
-        <div class="landing-header" style="background-image: url('../assets/paper_img/cat.jpg');">
-            <div class="container">
+        <div class="landing-header" style="background-image:url('../assets/paper_img/headimage.jpg');">
+            <div class="container"> 
                 <div class="motto">
-                    <h1 class="title-uppercase">Example page</h1>
-                    <h3>Start designing your landing page here.</h3>
+                    <h1 class="title-uppercase">食在成都</h1>
+                    <h3 class="word-color">成都——<br/>一个吃货来了就走不脱的城市.</h3>
                     <br />
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn"><i class="fa fa-play"></i>Watch video</a>
-                    <a class="btn">Download</a>
                 </div>
             </div>    
         </div>
