--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -111,7 +111,7 @@
                     <div class="col-md-4">
                         <div class="team-player">
                             <img src="../assets/paper_img/WechatIMG5.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
-                            <h5>抄手<br /><small class="text-muted">咸、辣</small></h5>
+                            <h5>抄手<br /><small class="text-muted">嫩、香、辣</small></h5>
                             <p>用清水和面做皮，皮内包上菜、或肉、或糖、或蜂蜜等作馅，用水煮熟。通常将鲜肉馄饨搭配以辣油为主的酱料食用，是四川特有的料理。</p>
                         </div>
                     </div>
