--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -87,14 +87,32 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="../examples/1.jpeg" alt="Awesome Image">
+                  <img src="../examples/2.gif" alt="Awesome Image">
                 </div>
                 <div class="item">
-                  <img src="../examples/2.jpeg" alt="Awesome Image">
+                  <img src="../examples/1.jpg" alt="Awesome Image">
                 </div>
                 <div class="item">
-                  <img src="../examples/3.jpeg" alt="Awesome Image">
+                  <img src="../examples/3.jpg" alt="Awesome Image">
                 </div>
+                <div class="item">
+                  <img src="../examples/4.jpg" alt="Awesome Image">
+                </div>
+                <div class="item">
+                  <img src="../examples/5.jpg" alt="Awesome Image">
+                </div>  
+                <div class="item">
+                  <img src="../examples/6.jpg" alt="Awesome Image">
+                </div>  
+                <div class="item">
+                  <img src="../examples/7.jpeg" alt="Awesome Image">
+                </div>  
+                <div class="item">
+                  <img src="../examples/8.jpeg" alt="Awesome Image">
+                </div>
+                <div class="item">
+                  <img src="../examples/9.jpg" alt="Awesome Image">
+                </div>                                                                                       
               </div>
             
               <!-- Controls -->
