--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -135,48 +135,56 @@
             <div class="section section-dark text-center landing-section">
                 <div class="container">
                     <h2>Let's talk about the food</h2>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="../assets/paper_img/WechatIMG7.png" alt="Thumbnail Image" class="img-circle img-responsive">
-                            <h5>豆 花 <br /><small class="text-muted">甜、咸</small></h5>
-                            <p>豆花是四川常见的家常美味菜肴，比豆腐脑要老一点。喜咸辣口味可选馓子豆花或麻辣豆花，大热天或吃辣食时可来一碗冰醉豆花，口感清凉爽滑又稍带甜味，那解暑消辣的效果绝不比冰淇淋差。</p>
+
+                    <div class="abc">
+                        <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="../assets/paper_img/WechatIMG7.png" alt="Thumbnail Image" class="img-circle img-responsive">
+                                <h5>豆 花 <br /><small class="text-muted">甜、咸</small></h5>
+                                <p>豆花是四川常见的家常美味菜肴，比豆腐脑要老一点。喜咸辣口味可选馓子豆花或麻辣豆花，大热天或吃辣食时可来一碗冰醉豆花，口感清凉爽滑又稍带甜味，那解暑消辣的效果绝不比冰淇淋差。</p>
+                            </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="../assets/paper_img/WechatIMG6.png" alt="Thumbnail Image" class="img-circle img-responsive">
+                                <h5>三大炮<br /><small class="text-muted">甜</small></h5>
+                                <p>一种糯米类型的甜点，类似红糖糍粑，但比较具有观赏性。一份有三个糯米团，扔到中间平台上，发出一阵声响后落入后面容器里裹上粉。做一份能听三声响儿，挺有趣。</p>
+                            </div>
+                        </div>  
                     </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="../assets/paper_img/WechatIMG6.png" alt="Thumbnail Image" class="img-circle img-responsive">
-                            <h5>三大炮<br /><small class="text-muted">甜</small></h5>
-                            <p>一种糯米类型的甜点，类似红糖糍粑，但比较具有观赏性。一份有三个糯米团，扔到中间平台上，发出一阵声响后落入后面容器里裹上粉。做一份能听三声响儿，挺有趣。</p>
+                    <div class="abc">
+                          <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="../assets/paper_img/WechatIMG3.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
+                                <h5>冒菜<br /><small class="text-muted">咸、辣</small></h5>
+                                <p>“冒菜”是成都的特色菜，“冒”字在这里是动词。准备一锅麻辣鲜香的汤汁，把菜用一个竹勺装好，一般一勺就是一份。在锅里煮熟，然后盛到碗里，顺便再舀一勺汤汁。冒菜的原料不限，这点和串串香类似，什么都可冒，什么都可上桌。</p>
+                            </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="../assets/paper_img/WechatIMG5.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
+                                <h5>抄手<br /><small class="text-muted">嫩、香、辣</small></h5>
+                                <p>用清水和面做皮，皮内包上菜、或肉、或糖、或蜂蜜等作馅，用水煮熟。通常将鲜肉馄饨搭配以辣油为主的酱料食用，是四川特有的料理。</p>
+                            </div>
+                        </div>  
                     </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="../assets/paper_img/WechatIMG3.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
-                            <h5>冒菜<br /><small class="text-muted">咸、辣</small></h5>
-                            <p>“冒菜”是成都的特色菜，“冒”字在这里是动词。准备一锅麻辣鲜香的汤汁，把菜用一个竹勺装好，一般一勺就是一份。在锅里煮熟，然后盛到碗里，顺便再舀一勺汤汁。冒菜的原料不限，这点和串串香类似，什么都可冒，什么都可上桌。</p>
+                    <div class="abc">
+                            <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="../assets/paper_img/WechatIMG4.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
+                                <h5>夫妻肺片<br /><small class="text-muted">咸、辣</small></h5>
+                                <p>四川名菜夫妻肺片属于冷菜，麻辣味型。牛肉、牛杂等肺片切得薄薄的，拌好吃起来又麻又辣，非常下饭，但比较重油。</p>
+                            </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="../assets/paper_img/WechatIMG2.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
+                                <h5>担担面<br /><small class="text-muted">咸、辣</small></h5>
+                                <p>正宗的担担面必须是老师傅用面粉擀制的面条，面条细而薄，还有最关键一笔是要舀上四川正宗的碎米芽菜佐味。担担面一般都是小碗盛装，量少质精，清清爽爽的一碗，有红油卧底，再加上脆脆的花生米，着实令人食指大动。</p>
+                            </div>
+                        </div> 
                     </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="../assets/paper_img/WechatIMG5.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
-                            <h5>抄手<br /><small class="text-muted">嫩、香、辣</small></h5>
-                            <p>用清水和面做皮，皮内包上菜、或肉、或糖、或蜂蜜等作馅，用水煮熟。通常将鲜肉馄饨搭配以辣油为主的酱料食用，是四川特有的料理。</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="../assets/paper_img/WechatIMG4.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
-                            <h5>夫妻肺片<br /><small class="text-muted">咸、辣</small></h5>
-                            <p>四川名菜夫妻肺片属于冷菜，麻辣味型。牛肉、牛杂等肺片切得薄薄的，拌好吃起来又麻又辣，非常下饭，但比较重油。</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="../assets/paper_img/WechatIMG2.png" alt="Thumbnail Image" class="img-circle img-circle img-responsive">
-                            <h5>担担面<br /><small class="text-muted">咸、辣</small></h5>
-                            <p>正宗的担担面必须是老师傅用面粉擀制的面条，面条细而薄，还有最关键一笔是要舀上四川正宗的碎米芽菜佐味。担担面一般都是小碗盛装，量少质精，清清爽爽的一碗，有红油卧底，再加上脆脆的花生米，着实令人食指大动。</p>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </div>     
