--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -132,7 +132,7 @@
 
 
 
-
+<a name="A2"></a>
         <div class="main">
             <div class="section text-center landing-section">
                 <div class="container">
