--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -33,10 +33,10 @@
           <ul class="nav navbar-nav navbar-right">
 
            <li>
-                <a href="#A2" class="btn btn-simple">概述</a>
+                <a href="#A1" class="btn btn-simple">概述</a>
             </li>
             <li>
-                <a href="#A1" class="btn btn-simple">图片</a>
+                <a href="#A2" class="btn btn-simple">图片</a>
             </li>
 
             <li>
@@ -62,7 +62,7 @@
 
 
 
-        <div class="main"><a name="A2"></a>
+        <div class="main"><a name="A1"></a>
             <div class="section text-center landing-section">
                 <div class="container">
                     <div class="row">
@@ -99,7 +99,7 @@
               </ol>
             
               <!-- Wrapper for slides -->
-              <div class="carousel-inner"><a name="A1"></a>
+              <div class="carousel-inner"><a name="A2"></a>
                 <div class="item active">
                   <img src="../examples/2.gif" alt="Awesome Image">
                 </div>
@@ -149,7 +149,7 @@
 
 
 
-            <div class="section section-dark text-center landing-section">
+            <div class="section section-dark text-center landing-section"><a name="A3"></a>
                 <div class="container">
                     <h2>Let's talk about the food</h2>
                     <div class="abc">
