--- a/x_paper_kit_v1.2.2/examples/landing.html
+++ b/x_paper_kit_v1.2.2/examples/landing.html
@@ -192,7 +192,7 @@
                             </div>
                         </div> 
                     </div>
-                   
+                   <a href="https://www.bilibili.com/video/av3458232/?from=search&seid=7117089580621232323" class="team-player" target="_blank">SEE MORE…</a>
                 </div>
             </div>
         </div>     
